# Hasky-FFI

./: .travis.yml  Hasky-FFI.cabal  Pythas-FFI.cabal  README.md  hasky-ffi.cabal  stack.yaml
.github/workflows/: haskell.yml
executables/: Main.hs
src/: CreateGoldenOutput.hs  Exports.hs
src/Foreign/: Hasky.hs  Pythas.hs
src/Foreign/Hasky/: AST.hs  Array.hs  FFICreate.hs  FFIType.hs  Finalizer.hs  HTypes.hs  List.hs  ParseExports.hs  ParseTypes.hs  ParseUtils.hs  String.hs  Tuples.hs  Utils.hs  Wrapper.hs
src/Foreign/Pythas/: AST.hs  FFICreate.hs  FFIType.hs  Finalizer.hs  HTypes.hs  ParseExports.hs  ParseTypes.hs  ParseUtils.hs  Parser.hs  Utils.hs  Wrapper.hs
test/: Main.hs  ParseUnitTests.hs  TypeProperties.hs  UnitTests.hs  WrapGoldenTests.hs
test/golden/gold/: README.md  constant.golden  constantInt.golden  constantList.golden  constantTuple.golden  doubleInt32Char  haskylen.golden  hello.golden  inputSideEffects.golden  listMixed.golden  listOfTuples  listOfTuplesNested.golden  listOfTuplesWithList.golden  mapQuarter  nested.golden  pureOperationFloat.golden  pureOperationMixed.golden  square.golden  testAlignment.golden  tuple.golden  tupleWithList.golden  tupleWithListOfNestedTuples.golden
test/golden/input/: NoiseClass.golden  NoiseClassInstance.golden  NoiseNewType  NoiseRecord.golden  NoiseSumType.golden  NoiseType  Whitespace.golden  charInt32Double  constant  constantInt.golden  constantList.golden  constantQuadruple.golden  constantString.golden  constantTriple.golden  constantTuple.golden  doubleInt32Char  haskellList  haskylen  hello.golden  inputSideEffects.golden  int32CharChar.golden  int32DoubleChar  listMixed  listNested.golden  listOfInteger  listOfTuples  listOfTuplesNested.golden  listOfTuplesWithList  mapQuarter.golden  multisin.golden  nested  noiseFunc  pureOperationFloat.golden  pureOperationInt.golden  pureOperationMixed  pureOperationStrings.golden  sideEffects  somecomplicatedfun  square.golden  strings.golden  (+5 more)
test/golden/output/: Example_hasky_ffi.hs.golden  Test_hasky_ffi.hs  charInt32Double.golden  constantQuadruple.golden  constantString  constantTriple.golden  haskellList.golden  int32CharChar.golden  int32DoubleChar  listNested.golden  listOfInteger.golden  multisin  pureOperationInt  pureOperationStrings.golden  sideEffects.golden  strings.golden  tuple.golden  tupleWithNestedList.golden
