Name: Hasky-FFI
Version: 0.0.0.1
Cabal-Version: >= 1.10
License: LGPL-3
License-file: COPYING
Author: Simon Plakolb
Homepage: https://github.com/pinselimo/hasky-ffi
Synopsis: Haskell FFI wrapper.
Description: Create FFI wrapped modules from Haskell source files!
Maintainer: s.plakolb@gmail.com
Copyright: (c) 2020 Simon Plakolb
Category: Foreign
Build-Type: Simple
Extra-Source-Files: COPYING, COPYING.LESSER, README.md, ./src/Exports.hs

Source-Repository   head
    type:     git
    location: https://github.com/pinselimo/hasky-ffi

Library
    Exposed-Modules:
        Foreign.Hasky
        Foreign.Hasky.Array
        Foreign.Hasky.List
        Foreign.Hasky.String
        Foreign.Hasky.Tuples
    Other-Modules:
        Foreign.Hasky.AST
        Foreign.Hasky.FFICreate
        Foreign.Hasky.FFIType
        Foreign.Hasky.Finalizer
        Foreign.Hasky.HTypes
        Foreign.Hasky.ParseExports
        Foreign.Hasky.ParseTypes
        Foreign.Hasky.ParseUtils
        Foreign.Hasky.Utils
        Foreign.Hasky.Wrapper
    hs-source-dirs: src
    Build-Depends:  base        >= 4.0 && < 5.0,
                    C-structs   >= 0.1 && < 0.2,
                    parsec      >= 3.0 && < 3.2

Executable          hasky-ffi
    Main-is:        Main.hs
    Default-Language: Haskell2010
    Build-Depends:  base, C-structs, Hasky-FFI
    hs-source-dirs: executables

Test-Suite unit-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test, src
    build-depends:
        base         >= 4.0 && < 5.0,
        C-structs    >= 0.1 && < 0.2,
        parsec       >= 3.0 && < 3.2,
        HUnit        >= 1.2 && < 1.7,
        QuickCheck   >= 2.7 && < 2.15,
        Glob         >= 0.8 && < 0.11,
        filepath     >= 1.4 && < 1.5,
        tasty        >= 1.0 && < 1.4,
        tasty-hunit  >= 0.10 && < 0.11,
        tasty-golden >= 2.3.2 && < 2.4.0,
        tasty-quickcheck >= 0.10 && < 0.11

Test-Suite doctest
  type: exitcode-stdio-1.0
  main-is: DocTest.hs
  hs-source-dirs: test
  build-depends:
    base        >= 4.0 && < 5.0,
    doctest     >= 0.10 && < 0.18,
    Glob        >= 0.8 && < 0.11

